--- a/about.html
+++ b/about.html
@@ -1,166 +1,198 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>About Kazi Athar (UX/UI Designer)</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-  </head>
-  <body>
-    <header>
-      <div class="container">
-        <a href="#">Kazi Athar</a>
-        <nav>
-         <ul>
+
+<head>
+  <meta charset="utf-8">
+  <title>About Kazi Athar (UX/UI Designer)</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <script src="https://kit.fontawesome.com/b76ee87640.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <header>
+    <div class="container">
+      <a href="#">Kazi Athar</a>
+      <nav>
+        <ul>
           <li><a href="index.html">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="#contact">Contact</a></li>
-         </ul>
-        </nav>
-        </div>
-    </header>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-    <main>
+  <main>
 
-     <div class="about section"> <!--start the about section-->
+    <div class="about section">
+      <!--start the about section-->
 
-       <div class="container"><!-- start conatiner for the h1-->
+      <div class="container">
+        <!-- start conatiner for the h1-->
 
         <h1>About</h1>
 
       </div><!-- end container for h1-->
 
-    </div><!--end about section-->
+    </div>
+    <!--end about section-->
 
-    <div class="main section"> <!--start the section-->
+    <div class="main section">
+      <!--start the section-->
 
-      <div class="container"><!-- start conatiner for content-->
+      <div class="container">
+        <!-- start conatiner for content-->
 
-       <picture><!--profile pic-->
-         <souce srcset="img/pic@1.jpg" media="(max-width:767px)">
-          <img src="img/pic@2.jpg" alt="Kazi's Profile Picture">
-       </picture>
+        <picture>
+          <!--profile pic-->
+          <source srcset="img/pic-600.jpg" media="(max-width:767px)">
+            <img src="img/pic-1200.jpg" alt="Kazi's Profile Picture">
+        </picture>
 
-       <div class="row"><!-- start row for my story and skills section-->
+        <div class="row">
+          <!-- start row for my story and skills section-->
 
-         <!--my story-->
-         <div class="column"><!-- start column for my story-->
+          <!--my story-->
+          <div class="column">
+            <!-- start column for my story-->
 
-           <h2>My Story</h2>
+            <h2>My Story</h2>
 
-           <p>Hi! I am Kazi, a UI/UX Designer with a background in Environmental
+            <p>Hi! I am Kazi, a UI/UX Designer with a background in Environmental
               Science and sustainability. Based in Helsinki, I'm available for
               local and international projects and willing to relocate. Having
               learned early on the value of sustainable design, I apply my
               natural empathy and awareness of others to create user-centric
               solutions to design challenges. I also possess solid research skills,
               and a goal-oriented working style. I like to start any project with thorough research,
-              once I  have that in check, I begin jotting down ideas to design and test with users.
+              once I have that in check, I begin jotting down ideas to design and test with users.
 
               To see more of my design process, check out my work samples, or
               reach out to me for a chat! Looking forward to hearing from you!
-          </p>
-          <a href="files/kazi-athar-cv.pdf" target="_blank">My Resume</a>
+            </p>
+            <a href="files/kazi-athar-cv.pdf" target="_blank">My Resume</a>
 
-         </div> <!--end column for my story-->
-        <!--skills and tools-->
-        <div class="column"><!--start column for skills and tools-->
+          </div>
+          <!--end column for my story-->
+          <!--skills and tools-->
+          <div class="column">
+            <!--start column for skills and tools-->
 
-          <h2>Skills & Tools</h2>
+            <h2>Skills & Tools</h2>
 
-           <div class="row"><!--start row for skills and tool columns-->
+            <div class="row">
+              <!--start row for skills and tool columns-->
 
-             <div class="column for skills"><!--start skills column-->
+              <div class="column for skills">
+                <!--start skills column-->
 
-              <h3>Relevant Skills</h3>
+                <h3>Relevant Skills</h3>
 
-               <ul>
-                <li>User research</li>
-                <li>Wireframing</li>
-                <li>Prototyping</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-               </ul>
-             </div><!--end column for skills-->
+                <ul>
+                  <li>User research</li>
+                  <li>Wireframing</li>
+                  <li>Prototyping</li>
+                  <li>HTML</li>
+                  <li>CSS</li>
+                  <li>JavaScript</li>
+                </ul>
+              </div>
+              <!--end column for skills-->
 
-             <div class="column for tools"><!--start columng for tools i use-->
+              <div class="column for tools">
+                <!--start columng for tools i use-->
 
-              <h3>Tools I Use</h3>
-              <ul>
-               <li>Sketch</li>
-               <li>Adobe XD</li>
-               <li>Figma</li>
-               <li>Flinto</li>
-               <li>InVision</li>
-               <li>Atom</li>
-               <li>Photoshop</li>
-               <li>Illustrator</li>
-              </ul>
-
-
-             </div><!--end column for tools i use-->
-
-          </div><!--end row for skills and tools columns-->
-
-        </div><!--end column for skills and tools-->
-
-
-      </div><!--end row for my story and skills section-->
-
-     </div><!-- end container for content-->
-
-   </div><!--end main section-->
+                <h3>Tools I Use</h3>
+                <ul>
+                  <li>Sketch</li>
+                  <li>Adobe XD</li>
+                  <li>Figma</li>
+                  <li>Flinto</li>
+                  <li>InVision</li>
+                  <li>Atom</li>
+                  <li>Photoshop</li>
+                  <li>Illustrator</li>
+                </ul>
 
 
+              </div>
+              <!--end column for tools i use-->
+
+            </div>
+            <!--end row for skills and tools columns-->
+
+          </div>
+          <!--end column for skills and tools-->
+
+
+        </div>
+        <!--end row for my story and skills section-->
+
+      </div><!-- end container for content-->
+
+    </div>
+    <!--end main section-->
 
 
 
 
-    </main>
-
-    <footer>
-     <div class="container"> <!--open section for footer-->
-       <h2>Let's talk!</h2>
-        <p>If you happen to like my work and want to get in touch, I would love to be of assistance to you!
-           Call me <a href="tel:+35844983453">+35844983453</a> or you could also reach out to me via Skype
-           <a href="skype:live:wahajkazi_1">kaziathar</a>
-
-        </p>
-
-        <div class="email container"><!--open email section-->
-          <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
-        </div><!--end email section-->
-
-        <div class="social media section"><!--open social media section-->
-          <ul>
-           <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
-             <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 100 125" x="0px" y="0px"><title>Linkedin</title><rect x="22.9" y="31.59" width="4" height="37.29"/><polygon points="77.65 68.78 73.65 68.78 73.65 35.01 41.88 35.01 41.88 68.78 37.88 68.78 37.88 31.01 77.65 31.01 77.65 68.78"/><path d="M95,95H5V5H95ZM9,91H91V9H9Z"/><text x="0" y="115" fill="#000000" font-size="5px"font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif"> </svg>
-             </a></li>
-
-           <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank"><svg height='100px' width='100px'  fill="#000000" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" data-icon="home" data-container-transform="translate(0 3)" viewBox="6.4 -12.8 128.0 172.8" x="0px" y="0px"><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="2" height="71.070671" x="63.594711" y="38.60828" rx="0.53159219" ry="0.53159219"></rect><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="2" height="43.618778" x="-79.939331" y="42.674709" rx="0.53159219" ry="0.53159219" transform="matrix(0,-1,1,0,0,0)"></rect><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="23.639034" height="1.9993501" x="63.97385" y="38.597912" rx="0.58548695" ry="0.58548695"></rect></svg>
-           </a></li>
-         </ul>
 
 
-        </div> <!--end social media section-->
+  </main>
 
-       <div class="copyright"> <!--open opyright section-->
+  <footer>
+    <div class="container">
+      <!--open section for footer-->
+      <h2>Let's talk!</h2>
+      <p>If you happen to like my work and want to get in touch, I would love to be of assistance to you!
+        Call me <a href="tel:+35844983453">+35844983453</a> or you could also reach out to me via Skype
+        <a href="skype:live:wahajkazi_1">kaziathar</a>
 
-           <a href="#">Kazi Athar</a>
+      </p>
+
+      <div class="email container">
+        <!--open email section-->
+        <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
+      </div>
+      <!--end email section-->
+
+      <div class="social media section">
+        <!--open social media section-->
+        <ul>
+          <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
+              <i class="fab fa-linkedin-in"></i>
+            </a></li>
+
+          <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
+              <i class="fab fa-facebook-f"></i>
+            </a></li>
+        </ul>
+
+
+      </div>
+      <!--end social media section-->
+
+      <div class="copyright">
+        <!--open opyright section-->
+
+        <a href="#">Kazi Athar</a>
 
         <p>Copyright Kazi Athar 2020</p>
 
-      </div><!--end of copyright-->
+      </div>
+      <!--end of copyright-->
 
-      </div> <!--end section for footer-->
+    </div>
+    <!--end section for footer-->
 
-    </footer>
+  </footer>
 
-  </body>
+</body>
+
 </html>
