--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://kit.fontawesome.com/b76ee87640.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -50,10 +51,12 @@
           <div class="row"><!--open row that contains the first project-->
 
             <div class="column"><!--open first column for image-->
+
              <picture>
                 <source srcset="img/hopeful/banner-mobile.png" media="(max-width:767px)">
                 <img src="img/hopeful/banner-desktop.png" alt="Hopeful">
               </picture>
+
             </div><!--end first column for image-->
 
             <div class="column"><!--open second column for text-->
@@ -106,10 +109,11 @@
 
           <ul>
            <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
-             <svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 100 125" x="0px" y="0px"><title>Linkedin</title><rect x="22.9" y="31.59" width="4" height="37.29"/><polygon points="77.65 68.78 73.65 68.78 73.65 35.01 41.88 35.01 41.88 68.78 37.88 68.78 37.88 31.01 77.65 31.01 77.65 68.78"/><path d="M95,95H5V5H95ZM9,91H91V9H9Z"/><text x="0" y="115" fill="#000000" font-size="5px"font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif"> </svg>
+             <i class="fab fa-linkedin-in"></i>
              </a></li>
 
-           <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank"><svg height='100px' width='100px'  fill="#000000" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" version="1.1" data-icon="home" data-container-transform="translate(0 3)" viewBox="6.4 -12.8 128.0 172.8" x="0px" y="0px"><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="2" height="71.070671" x="63.594711" y="38.60828" rx="0.53159219" ry="0.53159219"></rect><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="2" height="43.618778" x="-79.939331" y="42.674709" rx="0.53159219" ry="0.53159219" transform="matrix(0,-1,1,0,0,0)"></rect><rect style="opacity:1;fill:#000000;fill-opacity:1;stroke:none;stroke-width:9.69999981;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1" width="23.639034" height="1.9993501" x="63.97385" y="38.597912" rx="0.58548695" ry="0.58548695"></rect></svg>
+           <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
+             <i class="fab fa-facebook-f"></i>
            </a></li>
          </ul>
 
