--- a/hopeful.html
+++ b/hopeful.html
@@ -64,6 +64,8 @@
 
       </picture>
 
+        <!--start section 1-->
+
       <h2>1.Defining the Problem</h2>
 
       <p>
@@ -113,6 +115,7 @@
       <a href="https://docs.google.com/document/d/1w0f2qAPdp2UrXHJigd9qGex5JUyiimPnugT50Wgd31I/edit?usp=sharing">Link</a> to the full prototype
       </p>
 
+      <!--start section 2-->
       <h2>2. Understanding the User</h2>
       <p>
         I started out with preparing a test script and plan for my interviews. I picked out 3 people who have been to therapy or have used a meditation app to interview. The interviews were mostly about people’s motivations, experiences and frustrations with the current platform they are using. Following that I did affinity mapping to put everything into perspective. Here’s a picture to showcase my findings.
@@ -228,7 +231,123 @@
         </div><!--end column for 2nd journey-->
 
       </div><!--end row for user journeys-->
-      
+
+    <!--start section 3-->
+
+    <h2>3.Foundational Design</h2>
+    <p>
+      It was time to get my creative juices flowing by designing some low fidelity wireframes. I also decided to create paper prototypes by annotating the wireframes.
+    </p>
+
+    <h2>Low Fidelity Wireframes</h2>
+
+    <h4>Booking a session</h4>
+
+    <p>Here we can how a user might book a session with a therapist using low fidelity wireframes for mobile.</p>
+
+    <picture>
+    <source srcset="img/hopeful/lofi-mobile-booking-600.png" media="(max-width:767px)">
+    <img srcset="img/hopeful/lofi-mobile-booking-1200.png" alt="Low fidelity wireframe for booking">
+    </picture>
+
+   <h4>Listening to a Sleepcast</h4>
+
+   <p>
+     Users can also listen to Sleepcasts free of charge. It serves as a nice function of utility.
+   </p>
+
+   <picture>
+   <source srcset="img/hopeful/lofi-mobile-sleepcasts-600.png" media="(max-width:767px)">
+   <img srcset="img/hopeful/lofi-mobile-sleepcasts-1200.png" alt="Low fidelity wireframe for sleepcasts">
+   </picture>
+
+   <h2>Mid Fidelity Wireframes</h2>
+   <p>
+     Now it was time to go to my favorite design tool, Sketch, to design mid fidelity wireframes for booking a session with a therapist and listen to sleepcasts.
+   </p>
+
+   <h4>Booking a Session</h4>
+   <p>
+     Here's the flow for booking a session with a  therapist. I used Sketch to lay down the foundation for my final screens.
+   </p>
+   <picture>
+   <source srcset="img/hopeful/midfi-mobile-booking-600.png" media="(max-width:767px)">
+   <img srcset="img/hopeful/midfi-mobile-booking-1200.png" alt="Mid fidelity wireframe for booking">
+   </picture>
+
+  <h4>Listening to Sleepcasts</h4>
+  <p>Subsequently, I designed the flow for listening to a Sleepcast as well
+  </p>
+  <picture>
+  <source srcset="img/hopeful/midfi-mobile-sleepcasts-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/midfi-mobile-sleepcasts-1200.png" alt="Mid fidelity wireframe for sleepcasts">
+  </picture>
+
+  <!--start section 4-->
+  <h2>4.Usability Testing</h2>
+  <p>
+    I figured my wireframes were detailed enough to conduct usability testing. So I booked time slots with 6 different people. The tests were based on the following parameters;
+  </p>
+  <ul>
+    <li>Booking an appointment with a therapist</li>
+    <li>Listening to a Sleepcast</li>
+  </ul>
+  <p>
+    I used unmoderated, remote testing using the app called ‘Participate’. It was nice because the participants could do the test whenever it was suitable for them. After recording the feedback, I divided it into observations, positive quotes, negative quotes and errors. To put everything into perspective, I conducted another an affinity mapping study, Here’s what it looked like.
+  </p>
+  <picture>
+  <source srcset="img/hopeful/affinity-mapping-usability-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/affinity-mapping-usability-1200.png" alt="Affinity Mapping">
+  </picture>
+  <h4>Key Insights</h4>
+  <ul>
+    <li>People were satisfied with the functionality</li>
+    <li>The body text was too small, so I enlarged it</li>
+    <li>There was no way to check the appointments, so I made a brand new appointments screens</li>
+  </ul>
+    <p>
+      Some of the feedback was too specific and would require a lot of context. Therefore, I won’t get into nitty-gritty here.
+    </p>
+
+    <!--start section 5-->
+  <h2>Refining the Design</h2>
+  <p>
+    Now we come to the part where I made all the visual design decisions. I established a color palette for the design. I wanted to use yellow with a minimalistic touch to the website. It didn’t stop just there, I also established a design language system, establishing some guidelines that would drive my design decisions. Here’s what it looked like.
+  </p>
+
+  <picture>
+  <source srcset="img/hopeful/section 5/typography-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/typography-1200.png" alt="Typography and colors">
+  </picture>
+
+  <picture>
+  <source srcset="img/hopeful/section 5/ui-elements-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/ui-elements-1200.png" alt="UI elements">
+  </picture>
+
+  <picture>
+  <source srcset="img/hopeful/section 5/illustrations-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/illustrations-1200.png" alt="Illustrations">
+  </picture>
+
+  <picture>
+  <source srcset="img/hopeful/section 5/icons-600.png" media="(max-width:767px)">
+  <img srcset="img/hopeful/icons-1200.png" alt="Icons">
+  </picture>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
