--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="container">
-      <a href="#">Kazi Athar</a>
+      <a href="index.html">Kazi Athar</a>
       <nav>
         <ul>
           <li><a href="index.html">Work</a></li>
@@ -29,71 +29,46 @@
   </header>
 
   <main>
-
     <div class="about section">
       <!--start the about section-->
-
       <div class="container">
         <!-- start conatiner for the h1-->
-
         <h1>About</h1>
-
       </div><!-- end container for h1-->
-
     </div>
     <!--end about section-->
-
     <div class="main section">
       <!--start the section-->
-
       <div class="container">
         <!-- start conatiner for content-->
-
         <picture>
           <!--profile pic-->
           <source srcset="img/pic-600.jpg" media="(max-width:767px)">
-            <img src="img/pic-1200.jpg" alt="Kazi's Profile Picture">
+          <img src="img/pic-1200.jpg" alt="Kazi's Profile Picture">
         </picture>
-
         <div class="row">
           <!-- start row for my story and skills section-->
-
           <!--my story-->
           <div class="column">
             <!-- start column for my story-->
-
             <h2>My Story</h2>
-
-            <p>Hi! I am Kazi, a UI/UX Designer with a background in Environmental
-              Science and sustainability. Based in Helsinki, I'm available for
-              local and international projects and willing to relocate. Having
-              learned early on the value of sustainable design, I apply my
-              natural empathy and awareness of others to create user-centric
-              solutions to design challenges. I also possess solid research skills,
-              and a goal-oriented working style. I like to start any project with thorough research,
-              once I have that in check, I begin jotting down ideas to design and test with users.
-
-              To see more of my design process, check out my work samples, or
-              reach out to me for a chat! Looking forward to hearing from you!
+            <p>
+              Hi! I am Kazi, a UI/UX Designer with a background in Environmental Science and sustainability. Based in Helsinki, I'm available for local and international projects and willing to relocate. Having learned early on the value of
+              sustainable design, I apply my natural empathy and awareness of others to create user-centric solutions to design challenges. I also possess solid research skills,and a goal-oriented working style. I like to start any project with
+              thorough research, once have that in check, I begin jotting down ideas to design and test with users.To see more of my design process, check out my work samples, or reach out to me for a chat! Looking forward to hearing from you!
             </p>
             <a href="files/kazi-athar-cv.pdf" target="_blank">My Resume</a>
-
           </div>
           <!--end column for my story-->
           <!--skills and tools-->
           <div class="column">
             <!--start column for skills and tools-->
-
             <h2>Skills & Tools</h2>
-
             <div class="row">
               <!--start row for skills and tool columns-->
-
-              <div class="column for skills">
+              <div class="column">
                 <!--start skills column-->
-
                 <h3>Relevant Skills</h3>
-
                 <ul>
                   <li>User research</li>
                   <li>Wireframing</li>
@@ -104,10 +79,8 @@
                 </ul>
               </div>
               <!--end column for skills-->
-
-              <div class="column for tools">
+              <div class="column">
                 <!--start columng for tools i use-->
-
                 <h3>Tools I Use</h3>
                 <ul>
                   <li>Sketch</li>
@@ -119,80 +92,52 @@
                   <li>Photoshop</li>
                   <li>Illustrator</li>
                 </ul>
-
-
               </div>
               <!--end column for tools i use-->
-
             </div>
             <!--end row for skills and tools columns-->
-
           </div>
           <!--end column for skills and tools-->
-
-
         </div>
         <!--end row for my story and skills section-->
-
       </div><!-- end container for content-->
-
     </div>
     <!--end main section-->
-
-
-
-
-
-
   </main>
 
   <footer>
-    <div class="container">
+    <div class="section">
       <!--open section for footer-->
       <h2>Let's talk!</h2>
-      <p>If you happen to like my work and want to get in touch, I would love to be of assistance to you!
-        Call me <a href="tel:+35844983453">+35844983453</a> or you could also reach out to me via Skype
-        <a href="skype:live:wahajkazi_1">kaziathar</a>
-
+      <p>
+        If you happen to like my work and want to get in touch, I would love to be of assistance to you! Call me <a href="tel:+35844983453">+35844983453</a> or you could also reach out to me via Skype <a href="skype:live:wahajkazi_1">kaziathar</a>
       </p>
-
-      <div class="email container">
+      <div class="container">
         <!--open email section-->
         <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
       </div>
       <!--end email section-->
-
-      <div class="social media section">
+      <div class="container">
         <!--open social media section-->
         <ul>
           <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a></li>
-
           <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a></li>
         </ul>
-
-
       </div>
       <!--end social media section-->
-
-      <div class="copyright">
+      <div class="container">
         <!--open opyright section-->
-
         <a href="#">Kazi Athar</a>
-
         <p>Copyright Kazi Athar 2020</p>
-
       </div>
       <!--end of copyright-->
-
     </div>
     <!--end section for footer-->
-
   </footer>
-
 </body>
 
 </html>
