--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   <script src="https://kit.fontawesome.com/b76ee87640.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
@@ -88,38 +91,37 @@
   </main>
 
   <footer id="contact">
-    <div class="section">
       <!--open section for footer-->
       <h2>Let's talk!</h2>
-      <p>If you happen to like my work and want to get in touch, I would love to be of assistance to you!
+      <p>
+        If you happen to like my work and want to get in touch, I would love to be of assistance to you!
         Call me <a href="tel:+358449991122">+358449991122</a> or you could also reach out to me via Skype
         <a href="skype:kaziathar">kaziathar</a>
       </p>
-      <div class="container">
+      <div class="email">
         <!--open email section-->
         <a href="mailto:kaziathardesigns@gmail.com">Email me</a>
       </div>
       <!--end email section-->
-      <div class="container">
+      <div class="social-media">
         <!--open social media section-->
         <ul>
           <li><a href="https://www.linkedin.com/in/kazidesigns/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a></li>
-
           <li><a href="https://www.facebook.com/wahaj.kazi.370" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a></li>
         </ul>
       </div>
       <!--end social media section-->
-      <div class="container">
+      <div class="copyright">
         <!--open opyright section-->
         <a href="">
           <img src="https://via.placeholder.com/80">
         </a>
         <p>Copyright Kazi Athar 2020</p>
-     </div>
+      </div>
       <!--end of copyright-->
     </div>
     <!--end section for footer-->
