--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 
 <body>
   <header>
@@ -60,7 +62,7 @@
             <!--open second column for text-->
             <h3>Hopeful</h3>
             <p>Hopeful is a responsive website for people suffering from mental health issues. It enables people to connect with therapists online at a time of their convenience.</p>
-            <a href="hopeful.html">View project</a>
+            <a href="hopeful.html" class="button">View project</a>
           </div>
           <!--end second column for text-->
         </div>
@@ -79,7 +81,7 @@
             <!--open second column for text-->
             <h3>Zecore</h3>
             <p>Zecore is an online store that incorporates the principles of sustainability. It displays a variety of products and informs users about the importance of sustainable living. </p>
-            <a href="#">View project</a>
+            <a href="#" class="button">View project</a>
           </div>
           <!--end second column for text-->
         </div>
